# nix-build123d

./: .gitignore  README.md  devenv.nix  flake.nix  object.py  pyproject.toml  util.py
templates/extend/: flake.nix  pyproject.toml
